--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -149,9 +149,7 @@
 
 <div id="info" class="row col-md-12">
     <h1 class="blog">Info</h1>
-    <p class="neutral">
-        Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.
-    </p>
+    <p class="neutral">Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.</p>
     <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
     <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
     <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
@@ -161,13 +159,13 @@
     <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
     <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
     <h4 class="blog">The Pink Martini Solution</h4>
-    <p class="neutral">
-        Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
-        <h4 class="blog">Help: How would you group this dance style?</h4>
-    <p class="neutral">
-        One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
-        <h4 class="blog">The “Dancing with the Stars” Solution</h4>
-    <p class="neutral">
-        I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a>
-    </p>
+    <p class="neutral">Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
+    <h4 class="blog">Help: How would you group this dance style?</h4>
+    <p class="neutral">One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
+    <h4 class="blog">The “Dancing with the Stars” Solution</h4>
+    <p class="neutral">I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a></p>
+    <h4 class="blog">Wedding Music Part I: Can we dance the Foxtrot to our song?</h4>
+    <p class="neutral">When did you first learn to dance? For many people it was so that they could dance at their wedding... <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">[Read more]</a></p>
+    <h4 class="blog">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</h4>
+    <p class="neutral">What if you are particularly in love with one dance style or are just learning to dance one particular style and are looking for an inspiring first dance song in that style? <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">[Read more]</a></p>
 </div>
