Get user tag update working

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -15,6 +15,8 @@
     <li>@Html.ActionLink("Check Tag Types", "UpdateTagTypes", new { update = false }, null)</li>
     <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes", new { update = true }, null)</li>
     <li>@Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries")</li>
+    <li>@Html.ActionLink("Check User Tags", "RebuildUserTags", new { update = false }, null)</li>
+    <li>@Html.ActionLink("Update User Tags", "RebuildUserTags", new { update = true }, null)</li>
 </ul>
 
 <h3>Logging</h3>
