Enable rebuilding tags for a list of songs

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -16,7 +16,8 @@
     <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes", new { update = true }, null)</li>
     <li>@Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries")</li>
     <li>@Html.ActionLink("Check User Tags", "RebuildUserTags", new { update = false }, null)</li>
-    <li>@Html.ActionLink("Update User Tags", "RebuildUserTags", new { update = true }, null)</li>
+    <li>@Html.ActionLink("Update User Tags", "RebuildUserTags", new {update = true}, null)</li>
+    <li>@Html.ActionLink("Update User Tags (for specific song)", "RebuildUserTags", new { update = true, songIds = "372709cb-f116-4692-b990-f0fd80e7a84e" }, null)</li>
 </ul>
 
 <h3>Logging</h3>
