Get Admin Monitor hooked up for UserTag and Database Reload

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -51,7 +51,8 @@
     <li>@Html.ActionLink("Trace Warning", "SetTraceLevel", "Admin", new { level = 2 }, null)</li>
     <li>@Html.ActionLink("Trace Info", "SetTraceLevel", "Admin", new { level = 3 }, null)</li>
     <li>@Html.ActionLink("Trace Verbose", "SetTraceLevel", "Admin", new { level = 4 }, null)</li>
-    <li>@Html.ActionLink("Test Trace", "TestTrace", "Admin", new { message = "Nothing Special" }, null)</li>
+    <li>@Html.ActionLink("Test Trace", "TestTrace", "Admin", new {message = "Nothing Special"}, null)</li>
+    <li>@Html.ActionLink("Show Status", "AdminStatus", "Admin")</li>
 </ul>
 
 <hr />
