--- a/DanceCalc/m4d/Views/Home/Credits.cshtml
+++ b/DanceCalc/m4d/Views/Home/Credits.cshtml
@@ -16,7 +16,9 @@
 
 <p>The dancer silhouettes were created by Dmitry Skvorcov: © <a href="http://www.dreamstime.com/dmiskv_info#res10177599">Dmiskv</a> | <a href="http://www.dreamstime.com/#res10177599">Dreamstime.com</a> - <a href="http://www.dreamstime.com/royalty-free-stock-photography-silhouettes-pairs-dancing-image13114167#res10177599">Silhouettes Of The Pairs Dancing Photo</a></p>
 
-<p>Many of thie icons on the site are provided via the twitter bootstrap including of <a href="http://glyphicons.com/"></a>Glyphicons</p>
+<p>Many of thie icons on the site are provided via the twitter bootstrap inlusion of <a href="http://glyphicons.com/">Glyphicons</a></p>
+
+<p>The specific tag icons (shoes, note, drum, and tag) are from <a href="https://icons8.com/">icons8.com</a></p>
 
 <h2>Dance</h2>
 
