--- a/DanceCalc/m4d/Views/Tag/Index.cshtml
+++ b/DanceCalc/m4d/Views/Tag/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "Tag Cloud";
+    ViewBag.Description = "Explore songs based on musical genre, tempo, style and other tags.";
 }
 <h1>Tag Cloud</h1>
 
