--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@{
+﻿@model IEnumerable<SongCounts>
+
+@{
     ViewBag.Title = "Dance Style Index";
     ViewBag.Description = "A list of partner dancing styles, including Ballroom, Salsa, Swing, and Tango.";
     ViewBag.ShowTempo = false;
-}
 
-@model IEnumerable<m4dModels.SongCounts>
+
 
 <ol class="breadcrumb">
     <li><a href="/">Music4Dance</a></li>
