--- a/DanceCalc/m4d/Views/Shared/_TagCloud.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagCloud.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Diagnostics
-@using m4dModels
-@model IEnumerable<TagCount>
+﻿@model IEnumerable<TagCount>
 
 @{
     var tags = Model as List<TagCount> ?? Model.ToList();
