--- a/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
+++ b/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4dModels.AlbumDetails
+﻿@model AlbumDetails
 
 <div class="display-field">
     @if (!string.IsNullOrWhiteSpace(Model.Name))
