--- a/DanceCalc/m4d/App_Code/TagHelpers.cshtml
+++ b/DanceCalc/m4d/App_Code/TagHelpers.cshtml
@@ -1,8 +1,8 @@
 ﻿@using m4dModels
 @helper TagButton(TagCount tag, SongFilter filter, float cloudSize = 0)
 {
-    var buckets = new float[] {.25F,.5F,.75F,1,5,10,20,25,50,100};
-    var sizes = new int[] {14,16,18,20,22,24,26,28,30,32};
+    var buckets = new[] {.25F,.5F,.75F,1,5,10,20,25,50,100};
+    var sizes = new[] {14,16,18,20,22,24,26,28,30,32};
     var iconSize = 14;
     
     var filterString = string.Empty;
