--- a/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
+++ b/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
@@ -10,14 +10,14 @@
 
 <h2>Succeeded (@ViewBag.Succeeded.Count)</h2>
 <ul class="list-group">
-    @foreach (m4dModels.SongDetails item in ViewBag.Succeeded)
+    @foreach (SongDetails item in ViewBag.Succeeded)
     {
         <li class="list-group-item">@item.Title - @item.Artist</li>
     }
 </ul>
 <h2>Failed (@ViewBag.Failed.Count)</h2>
 <ul class="list-group">
-    @foreach (m4dModels.Song item in ViewBag.Failed)
+    @foreach (Song item in ViewBag.Failed)
     {
         <li class="list-group-item">@item.Title - @item.Artist</li>
     }
