--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -13,7 +13,7 @@
         <ul class="dropdown-menu" role="menu" aria-labelledby="filter-style">
             @foreach (var element in @Model.Styles)
             {
-                string id = "filter-style-" + element.Key;
+                var id = "filter-style-" + element.Key;
                 <li><a id="@id" href="#">@element.Value</a></li>
             }
         </ul>
@@ -101,7 +101,7 @@
 
     <script>
         var danceTypes = [
-            {id: "ALL", name: "All Types"},
+            {id: 'ALL', name: 'All Types'},
             @foreach (var item in Model.AllDanceGroups)
             {
                 <text>{id:"@item.Id",name:"@item.Name"},</text>
@@ -121,32 +121,12 @@
         ];
     </script>
     @{
-        bool paramDetailed = false;
-        int paramStyle = 0;
-        int paramMeter = 1;
-        int paramType = 0;
-        int paramOrg = 0;
+        var paramDetailed = (ViewData.ContainsKey("paramDetailed")) ? ViewBag.paramDetailed :false;
+        var paramStyle =  (ViewData.ContainsKey("paramStyle")) ? @ViewBag.paramStyle : 0;
+        var paramMeter = (ViewData.ContainsKey("paramMeter")) ? @ViewBag.paramMeter : 1;
+        var paramType = (ViewData.ContainsKey("paramType")) ? @ViewBag.paramType : 0;
+        var paramOrg = (ViewData.ContainsKey("paramOrg")) ? @ViewBag.paramOrg : 0;
         
-        if (ViewData.ContainsKey("paramDetailed"))
-        {
-            paramDetailed = @ViewBag.paramDetailed;
-        }
-        if (ViewData.ContainsKey("paramStyle"))
-        {
-            paramStyle = @ViewBag.paramStyle;
-        }
-        if (ViewData.ContainsKey("paramMeter"))
-        {
-            paramMeter = @ViewBag.paramMeter;
-        }
-        if (ViewData.ContainsKey("paramType"))
-        {
-            paramType = @ViewBag.paramType;
-        }
-        if (ViewData.ContainsKey("paramOrg"))
-        {
-            paramOrg = @ViewBag.paramOrg;
-        }
         <script>
             var paramDetailed = @(paramDetailed ? "true" : "false");
             var paramStyle = @paramStyle;
