Quick cleanup of counter controll based on writing docs

--- a/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
+++ b/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
@@ -60,6 +60,20 @@
     border-radius: 3px;
 }
 
+.calclabel
+{
+    font-size: large;
+    font-weight:bold;
+    padding: 3px 6px;
+    color: @brand-info;
+    background-color: #fff;
+    border-color: @brand-primary;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+
 .music
 {
     color: @music-color;
