--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row row-buffer">
-    <button id='count' type=button class="btn btn-lg btn-primary btn-block col-xs-12">Count</button>
+    <button id="count" type=button class="btn btn-lg btn-primary btn-block col-xs-12">Count</button>
 </div>
 <div class="row row-buffer">
     <input id="MPM" class="calculator col-xs-5" value="0.0" />
@@ -39,7 +39,7 @@
 }
 
 <div class="row row-buffer">
-    <input id="Tempo" class="col-xs-12" size="5" value="0.0" /> BPM
+    <span class="col-xs-12"><input style="width: 6em" class="calculator" id="Tempo" size="5" value="0.0" /> <span class="calculator">BPM</span></span>
 </div>
 
 <div class="row row-buffer">
