--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Counter", "counter", "Home")</li>
+                            <li>@Html.ActionLink("Tempo Counter", "counter", "Home")</li>
                             <li>@Html.ActionLink("Tempi (Tempos)", "tempi", "Home")</li>
                         </ul>
                     </li>
