--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -59,7 +59,7 @@
 <h3> Initializiation Tasks</h3>
 <ul>
     <li>@Html.ActionLink("RebuildDanceInfo", "RebuildDanceInfo")</li>
-    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new {tags = false, dances = false, songs = false}), @Html.ActionLink("Dances", "BackupDatabase", new {tags = false, users = false, songs = false})</li>
+    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new {tags = false, dances = false, songs = false}), @Html.ActionLink("Dances", "BackupDatabase", new {tags = false, users = false, songs = false}), @Html.ActionLink("Tags", "BackupDatabase", new { tags = true, dances=false, users = false, songs = false })</li>
     <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new {useLookupHistory = "true"})</li>
     <li>@Html.ActionLink("Backup tail", "BackupTail", new {count = 150})</li>
     <li>@Html.ActionLink("Backup tail (500)", "BackupTail", new {count = 500})</li>
