--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -80,6 +80,16 @@
     }
 </ul>
 
+<h3>Scrape Spotify</h3>
+@using (Html.BeginForm("ScrapeSpotify", "Admin", FormMethod.Get))
+{
+    <span>User: </span><input type="text" name="user" value="SpotCharles"/><br/>
+    <span>Url: </span><input type="text" name="url" value="https://open.spotify.com/user/113231003/playlist/1tUHw7s4bfRVbPdHo6ut7D" />
+    <span>Dances: </span><input type="text" name="dances" value="CST"/>
+    <span>TagsUrl: </span><input type="text" name="tags" />
+    <input type="submit" value="Scrape" />
+}
+
 <hr />
 <h3>Songs Modified By</h3>
 @using (Html.BeginForm("FilterUser", "Song", FormMethod.Get))
