--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -70,7 +70,7 @@
     </fieldset>
 </div>
 
-@if (Model.TagSummary.Tags.Count != 0 || User.IsInRole("canEdit"))
+@if (Model.TagSummary.Tags.Count != 0 || User.IsInRole("canTag"))
 {
     <div class="row">
         <div class="col-md-12">
