--- a/DanceCalc/m4d/Views/ApplicationUsers/ChangeRoles.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/ChangeRoles.cshtml
@@ -5,6 +5,7 @@
 
     var roles = @Model.GetRoles(ViewBag.Roles);
     var editCheck = roles.Contains("canEdit") ? "checked" : string.Empty;
+    var tagCheck = roles.Contains("canTag") ? "checked" : string.Empty;
     var diagCheck = roles.Contains("showDiagnostics") ? "checked" : string.Empty;
     var dbaCheck = roles.Contains("dbAdmin") ? "checked" : string.Empty;
 }
@@ -22,6 +23,10 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="roles" value="@DanceMusicService.TagRole" @tagCheck>
+                        Tagger
+                    </label>
                     <label>
                         <input type="checkbox" name="roles" value="@DanceMusicService.EditRole" @editCheck>
                         Editor
