Fix BPM label on counter page

--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -39,7 +39,7 @@
 }
 
 <div class="row row-buffer">
-    <span class="col-xs-12"><input style="width: 6em" class="calculator" id="Tempo" size="5" value="0.0" /> <span class="calculator">BPM</span></span>
+    <span class="col-xs-12"><input style="width: 6em" class="calculator" id="Tempo" size="5" value="0.0" /> <span class="calclabel">BPM</span></span>
 </div>
 
 <div class="row row-buffer">
