--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -22,8 +22,9 @@
 
 <h3>Logging</h3>
 <ul>
-    <li>@Html.ActionLink("Log", "Index", "Log")</li>
-    <li>@Html.ActionLink("Restore From Log", "RestoreLines", "Log")</li>
+    <li>@Html.ActionLink("Log", "index", "log")</li>
+    <li>@Html.ActionLink("Restore From Log", "restoreLines", "log")</li>
+    <li>@Html.ActionLink("Modified", "sort", "song", new {sortOrder="Modified_desc"}, null)</li>
 </ul>
 
 <h3> Cleanup Tasks</h3>
@@ -64,6 +65,7 @@
     <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new {useLookupHistory = "true"})</li>
     <li>@Html.ActionLink("Backup tail", "BackupTail", new {count = 150})</li>
     <li>@Html.ActionLink("Backup tail (500)", "BackupTail", new {count = 500})</li>
+    <li>@Html.ActionLink("Backup tail (today)", "BackupTail", new { from = DateTime.Now.ToShortDateString(), count=5000 })</li>
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
     <li>@Html.ActionLink("Backup Tags", "BackupTags")</li>
